# flask-boilerplate

./: .dockerignore  .gitignore  Dockerfile  README.md  gunicorn.config.py  pyproject.toml  wsgi.py
app/: app.py  config.py
app/extensions/: api.py  database.py  logging.py  login_manager.py  super_admin.py
app/models/: __init__.py  user.py
app/modules/auth/: __init__.py  views.py
scripts/: build  clean  coverage  install  test
tests/: abic_faker.py  conftest.py  test_login.py
